--- a/01_introduction.ipynb
+++ b/01_introduction.ipynb
@@ -10,17 +10,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "761fadc5",
+   "id": "490c497a",
    "metadata": {},
    "source": [
     "> \"If you can not build it from scratch, you do not understand it\". \n",
     "\n",
-    "If you have ever interacted with Ethereum, whether as a developer or as a user, there is a good chance you came across the term `EVM`."
+    "If you have ever interacted with Ethereum, whether as a developer or as a user, there is a good chance you came across the `EVM`."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d8c197ce",
+   "id": "a9201c3f",
    "metadata": {},
    "source": [
     "## EVM"
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff01c3e7",
+   "id": "ff1aa7b6",
    "metadata": {},
    "source": [
     "The EVM is a central part of Ethereum. It is Ethereum's execution engine, responsible for executing Ethereum programs, also called Smart Contracts."
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0649d0f3",
+   "id": "0ae64c47",
    "metadata": {},
    "source": [
     "In this tutorial we are going to build the EVM from scratch. However, **this is not a reference implementation.** I will omit implementation details if I believe they are not necessary for understanding how the EVM works. This is about learning the core concepts of the EVM from first principles."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b8b91c6",
+   "id": "678fafad",
    "metadata": {},
    "source": [
     "That is why I want to call it a mini-EVM. A working but simplified version of the real thing. A virtual machine that takes in an Ethereum program as input and executes that."
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5112120b",
+   "id": "4cb75cdf",
    "metadata": {},
    "source": [
     "Bytecode is simply a list of valid EVM `opcodes`. A opcode is a operation like `ADD`, `SUBTRACT` or `STOP`."
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "262c1e04",
+   "id": "1a5bc5b1",
    "metadata": {},
    "source": [
     "Some of them can be seen in the table below:\n",
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4a42310",
+   "id": "936f584c",
    "metadata": {},
    "source": [
     "Importantly the EVM does not understand what `ADD` or `SUBTRACT` means. It only knows the identifier of the opcode. For `ADD` that would be `0x01`."
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d26cc41",
+   "id": "c9d06a84",
    "metadata": {},
    "source": [
     "So a valid program would look like this: `604260005260206000F3`. This is something the EVM could interpret."
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "882b5300",
+   "id": "b8053d2e",
    "metadata": {},
    "source": [
     "Currently there are 144 opcodes. You can see all of them [here](https://www.evm.codes/?fork=shanghai). This number changes all the time and is not fixed. New opcodes are added and old ones are deprecated quite frequently."
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27629418",
+   "id": "8065c220",
    "metadata": {},
    "source": [
     "As a developer you really don't want to write bytecode directly most of the time. This would be very slow and very error prone. This is where high-level programming languages like Solidiy or Vyper come in."
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2cecd9c",
+   "id": "07b18a11",
    "metadata": {},
    "source": [
     "But a Solidity or Vyper file is simply a text file. This is not something the EVM understands. We need a program that takes in the text file and translates that to EVM bytecode. This program is called the `compiler`. "
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85652361",
+   "id": "942df76a",
    "metadata": {},
    "source": [
     "What makes Ethereum so special? Compared to other blockchains that came before it like Bitcoin."
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9fb09d3a",
+   "id": "242f02f0",
    "metadata": {},
    "source": [
     "Ethereum is \"special\" because it is universal or `Turing complete`. Which means that any arbitrary program can be run on the EVM (we ignore gas and memory restrictions)."
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56bee6f1",
+   "id": "61e9d9d8",
    "metadata": {},
    "source": [
     "Bitcoin also has programming capabilities, called `bitcoin script`. But importantly, bitcoin script is **NOT** turing complete. There are programs that you simply can not implement in bitcoin script. That is not the case with for the EVM."
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0315f282",
+   "id": "5091ece3",
    "metadata": {},
    "source": [
     "We will build our mini-EVM from the bottom up. We will start with the `Stack`. Then move to `Memory` and `Storage`. Then we implement all EVM opcodes."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4969608e",
+   "id": "6eae2f72",
    "metadata": {},
    "source": [
     "After having built all these building blocks we will combine them to create our own EVM. In the end we are going to use our EVM to run some programs."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4cafa73f",
+   "id": "cb09458c",
    "metadata": {},
    "source": [
     "It is important to understand that our mini-EVM lives in total isolation. It has no clue about other contracts or accounts. Functions that need to interact with the \"outside world\" are mocked. This is a deliberate choice to keep it simple."
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d901b1d7",
+   "id": "134312fc",
    "metadata": {},
    "source": [
     "## Notes"
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90ae106a",
+   "id": "1619c219",
    "metadata": {},
    "source": [
     "Every notebook is available [here](https://github.com/shafu0x/evm-from-scratch/tree/main). If you see any mistakes please create an Issue on GitHub, or even better create a Pull Request ;)"
