--- a/02_stack.ipynb
+++ b/02_stack.ipynb
@@ -13,10 +13,9 @@
    "id": "af1e9462",
    "metadata": {},
    "source": [
-    "A stack is a very simple data structure.\n",
-    "It is a basically a list with the following special property:\n",
+    "The stack is a very simple data structure. It is a list with one restrctions. You can only directly interact with the top of it.\n",
     "\n",
-    "You can only directly interact with the top of the stack. You can `push` a value to the top of the stack and you can `pop` a vaule from the stack."
+    "You can `push` a new value to the top of the stack or you can `pop` an already existing value from the stack."
    ]
   },
   {
@@ -24,8 +23,7 @@
    "id": "61d3ad10",
    "metadata": {},
    "source": [
-    "A stack of plate is a good metaphor. You can add a plate from the top or remove a plate from the top.\n",
-    "A stack works in the exact same way."
+    "A stack of plates is a good metaphor. You can add a plate or remove a plate from the top. A stack works in the exact same way."
    ]
   },
   {
@@ -41,7 +39,7 @@
    "id": "6f5d2a45",
    "metadata": {},
    "source": [
-    "The EVM stack has a maximum capacity of `1024`. Every value on the stack is a 256 bit value (32 bytes)."
+    "The EVM stack has a maximum capacity of `1024` items. Every item on the stack is at max a 256 bit value (32 bytes)."
    ]
   },
   {
