--- a/03_memory.ipynb
+++ b/03_memory.ipynb
@@ -13,11 +13,9 @@
    "id": "fca10ea3",
    "metadata": {},
    "source": [
-    "The memory is basically a long list of bytes. It start of empty. Everytime we need to make that list bigger we have to pay a gas fee.\n",
+    "The memory is a long list of bytes. It starts of by being completely empty. It is similar to how RAM works in a computer. It is also volatile. Which means that after execution the memory is lost.\n",
     "\n",
-    "It is similar to RAM in a computer. Its volatile.\n",
-    "\n",
-    "Each memory cell can hold 1 byte (256 bits). A number between 0x00 (0) and 0xFF (255)."
+    "Each memory cell can hold 1 byte (8 bits). A number between 0 and 255."
    ]
   },
   {
