--- a/gas.ipynb
+++ b/gas.ipynb
@@ -2,22 +2,42 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c0744d13",
+   "id": "992711fa",
    "metadata": {},
    "source": [
-    "Every Ethereum node has to execute the same bytecode. To avoid a DDOS attack for example every opcode costs a specific amount of gas.\n",
-    "\n",
-    "Gas has to be paid in ETH. If you run out of gas while executing your bytecode your execution stops."
+    "# Gas"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "36996368",
+   "cell_type": "markdown",
+   "id": "12aaac06",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "## Gas"
+    "Gas is a very important concept. It is a measure for the amount of computational work. That could be storing a value in storage, expanding the size of memory or executing an arithmetic operation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "43167a92",
+   "metadata": {},
+   "source": [
+    "![title](https://media.marketrealist.com/brand-img/wU7UDcqaF/0x0/ethereum-gas-fee-1620759494562.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e03eb856",
+   "metadata": {},
+   "source": [
+    "We need gas because the ressources for doing computational work are limited. So in order to avoid a DDOS attack for example a user needs to spend some gas to run his program."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ce1857b1",
+   "metadata": {},
+   "source": [
+    "Gas has to be paid in ETH. If you run out of gas while executing your bytecode your execution stops."
    ]
   }
  ],
