--- a/03_memory.ipynb
+++ b/03_memory.ipynb
@@ -28,14 +28,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae2a99e2",
+   "id": "8ec70b95",
    "metadata": {},
    "source": [
-    "There are three memory opcodes that are important for us. One for loading and two for storing.\n",
+    "We will represent Memory as a simple list that can be accessed by an index or `offset`. \n",
     "\n",
-    "`MLOAD` lets us load one `word` specified by an offset. A word is 32 bytes. \n",
+    "An example:\n",
     "\n",
-    "`MSTORE` allows us to save one word to memory and `MSTORE8` allows us to save one byte to memory."
+    "Offset 2 would mean to get the byte stored at index 2. Combined with a `size` we can get a block of bytes. Offset 2 and size 5 would return the bytes from index 2 to index 7."
    ]
   },
   {
