--- a/14_memory.ipynb
+++ b/14_memory.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "7ed46c5f",
+   "metadata": {},
+   "source": [
+    "There are three memory opcodes that are important for us. One for loading and two for storing.\n",
+    "\n",
+    "`MLOAD` lets us load one `word` specified by an offset. A word is 32 bytes. \n",
+    "\n",
+    "`MSTORE` allows us to save one word to memory and `MSTORE8` allows us to save one byte to memory."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "6138c94e",
