--- a/03_memory.ipynb
+++ b/03_memory.ipynb
@@ -13,8 +13,16 @@
    "id": "fca10ea3",
    "metadata": {},
    "source": [
-    "The memory is a long list of bytes. It starts of by being completely empty. It is similar to how RAM works in a computer. It is also volatile. Which means that after execution the memory is lost.\n",
+    "The Memory is a list of bytes. Each byte can be accessed individually.\n",
     "\n",
+    "Similar to RAM, it starts of by being completely empty. It is also volatile, which means that after execution the memory is reset."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "871d2d0a",
+   "metadata": {},
+   "source": [
     "Each memory cell can hold 1 byte (8 bits). A number between 0 and 255."
    ]
   },
@@ -28,14 +36,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ec70b95",
+   "id": "21a5fe4e",
    "metadata": {},
    "source": [
     "We will represent Memory as a simple list that can be accessed by an index or `offset`. \n",
     "\n",
-    "An example:\n",
-    "\n",
-    "Offset 2 would mean to get the byte stored at index 2. Combined with a `size` we can get a block of bytes. Offset 2 and size 5 would return the bytes from index 2 to index 7."
+    "An offset of `2` would mean that we get the byte stored at index `2`. Combined with a `size` we can get a block of bytes. Offset `2` and size `5` would return the bytes from index `2` to index `7`."
    ]
   },
   {
@@ -55,25 +61,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7eef0025",
+   "id": "e3d93387",
    "metadata": {},
    "source": [
-    "We need to add logic in order to calculate the exact gas of extending the memory.\n",
-    "\n",
-    "I don't think we need to understand every detail here. Important to know is this: Accessing new offsets increases the memory. Memory expansion costs gas non-linearly. Making it more costly to access higher offsets."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 112,
-   "id": "aa067152",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def calc_memory_expansion_gas(memory_byte_size):\n",
-    "    memory_size_word = (memory_byte_size + 31) / 32\n",
-    "    memory_cost = (memory_size_word ** 2) / 512 + (3 * memory_size_word)\n",
-    "    return round(memory_cost)"
+    "Expanding the size of Memory consumes gas non-linearly. Making it more costly to create larger and larger Memory space."
    ]
   },
   {
@@ -86,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 124,
    "id": "d29147a2",
    "metadata": {},
    "outputs": [],
@@ -104,15 +95,23 @@
     "                expansion_size = 32\n",
     "                self.memory = [0x00 for _ in range(32)]\n",
     "                \n",
-    "            # extend memory if needed\n",
+    "            # extend memory more if needed\n",
     "            if len(self.memory) - offset < 0:\n",
     "                expansion_size += offset - len(self.memory)\n",
     "                self.memory.append(0x00 * expansion_size)\n",
     "                \n",
-    "            memory_expansion_cost = calc_memory_expansion_gas(expansion_size)\n",
+    "            memory_expansion_cost = expansion_size**2 # simplified!\n",
     "                \n",
     "        super().store(offset, value)\n",
     "        return memory_expansion_cost"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a8335a66",
+   "metadata": {},
+   "source": [
+    "Lets create a some Memory"
    ]
   },
   {
@@ -123,6 +122,14 @@
    "outputs": [],
    "source": [
     "memory = Memory()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c7906768",
+   "metadata": {},
+   "source": [
+    "We store 4 values at offset 0"
    ]
   },
   {
@@ -140,12 +147,12 @@
    "id": "0ca7d815",
    "metadata": {},
    "source": [
-    "As explained in the beginning. The EVM only allows us to load an entire word, even if the value that we are looking for is shorter than a word. "
+    "`load` will always return 32 bytes if it can"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 121,
    "id": "868202d7",
    "metadata": {},
    "outputs": [
@@ -186,13 +193,42 @@
        " 0]"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "memory.load(0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8eed2f4e",
+   "metadata": {},
+   "source": [
+    "### Advanced"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "67632091",
+   "metadata": {},
+   "source": [
+    "This is the actual way how the gas cost for a memory expansion is calculated."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "id": "aa067152",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calc_memory_expansion_gas(memory_byte_size):\n",
+    "    memory_size_word = (memory_byte_size + 31) / 32\n",
+    "    memory_cost = (memory_size_word ** 2) / 512 + (3 * memory_size_word)\n",
+    "    return round(memory_cost)"
    ]
   }
  ],
