--- a/04_storage.ipynb
+++ b/04_storage.ipynb
@@ -13,11 +13,9 @@
    "id": "6b581368",
    "metadata": {},
    "source": [
-    "The storage of a contract is  a mapping from a `key` to a `value`. \n",
+    "The storage is a mapping from a `key` to a `value`. The number of keys is for all practical purposes infinite. The value can be up to 32 bytes. Every value is initialized with a 0.\n",
     "\n",
-    "This is like the SSD in your computer\n",
-    "\n",
-    "The number of keys is for all practical purposes infinite. The value can be up to 32 bytes. Every value is initialized with a 0."
+    "This is like the SSD in your computer. Storage is non-volatile."
    ]
   },
   {
