--- a/05_opcodes.ipynb
+++ b/05_opcodes.ipynb
@@ -9,6 +9,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8d84263e",
+   "metadata": {},
+   "source": [
+    "What are opcodes?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "83170f18",
