--- a/04_storage.ipynb
+++ b/04_storage.ipynb
@@ -58,6 +58,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2e60b878",
+   "metadata": {},
+   "source": [
+    "### Warm/Cold"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d7515c89",
    "metadata": {},
    "source": [
