--- a/01_introduction.ipynb
+++ b/01_introduction.ipynb
@@ -232,6 +232,23 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2968d212",
+   "metadata": {},
+   "source": [
+    "## Prerequisites"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a7f43959",
+   "metadata": {},
+   "source": [
+    "- Python\n",
+    "- Hexadecimal Numbers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "134312fc",
    "metadata": {},
    "source": [
