--- a/05_opcodes.ipynb
+++ b/05_opcodes.ipynb
@@ -13,7 +13,39 @@
    "id": "8d84263e",
    "metadata": {},
    "source": [
-    "What are opcodes?"
+    "Opcodes are the insturctions that the EVM can execute. There are different categories of opcodes. Some of them are arithmetic or logic operations. Others deal with memory, storage and the stack."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2b2a981a",
+   "metadata": {},
+   "source": [
+    "Each opcode has a unique identifier. A number that represents that opcode. Because all opcodes are not larger than 1 byte it is very convinient to denote them in hexadecimal."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "70e5a1cf",
+   "metadata": {},
+   "source": [
+    "To make it easier for us to deal with opcodes we give them a short descriptive name. All opcodes can be found here."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a2fe40b",
+   "metadata": {},
+   "source": [
+    "In the following notebooks we will implement most of these opcodes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "926e5710",
+   "metadata": {},
+   "source": [
+    "All opcodes have one thing in common. They manipulate the current state of the EVM."
    ]
   },
   {
