--- a/05_opcodes.ipynb
+++ b/05_opcodes.ipynb
@@ -34,18 +34,35 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a2fe40b",
+   "id": "2b69c089",
    "metadata": {},
    "source": [
-    "In the following notebooks we will implement most of these opcodes."
+    "## Implementation"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "926e5710",
+   "id": "0a2fe40b",
    "metadata": {},
    "source": [
-    "All opcodes have one thing in common. They manipulate the current state of the EVM."
+    "In the following notebooks we will implement most of these opcodes. \n",
+    "All opcodes have one thing in common. They manipulate the current state of the EVM. That is why we will create a function for each of them, that takes an EVM instance as parameter.\n",
+    "\n",
+    "Every opcode function will be structured like this.\n",
+    "\n",
+    "```\n",
+    "def opcode(evm):\n",
+    "    # manipulate the evm\n",
+    "    # ...\n",
+    "```  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a5d18d5f",
+   "metadata": {},
+   "source": [
+    "# List "
    ]
   },
   {
