--- a/05_1_state.ipynb
+++ b/05_1_state.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2144956c",
+   "id": "973f8632",
    "metadata": {},
    "source": [
     "# EVM State"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bbbd8678",
+   "id": "784a59d7",
    "metadata": {},
    "source": [
     "The EVM is a state machine. A valid Ethereum program or valid bytecode can manipulate that state."
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f2d6ffc",
+   "id": "200c45d3",
    "metadata": {},
    "source": [
     "A specific opcode is an operation that manipulates that state."
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02788f04",
+   "id": "36a04101",
    "metadata": {},
    "source": [
     "### Program Counter (pc)"
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "630b9387",
+   "id": "ce9fe248",
    "metadata": {},
    "source": [
     "The program counter points to the next opcode that the EVM is going to execute."
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1edc1314",
+   "id": "8bd37067",
    "metadata": {},
    "source": [
     "### Stack / Memory / Storage"
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eefe4bf0",
+   "id": "a8d57b1b",
    "metadata": {},
    "source": [
     "All of them are part of the EVM state. And are the areas where the EVM manipulates and stores data."
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45b855a7",
+   "id": "19633bd5",
    "metadata": {},
    "source": [
     "### Program"
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c4cdc42",
+   "id": "05ec82bf",
    "metadata": {},
    "source": [
     "This is where we store the bytecode of the current program. It can not change during execution, which makes it immutable."
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0375459a",
+   "id": "e07bf794",
    "metadata": {},
    "source": [
     "### Gas"
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "188bb1d3",
+   "id": "6c61487c",
    "metadata": {},
    "source": [
     "We need to keep track how much gas we currently have and how much we already consumed. Most opcodes make the gas counter go down."
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d8d4257",
+   "id": "8b45b305",
    "metadata": {},
    "source": [
     "### Value"
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "202940ec",
+   "id": "a52bd4e8",
    "metadata": {},
    "source": [
     "How much Ether (wei) this current execution can consume."
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e55627c4",
+   "id": "5abc90e8",
    "metadata": {},
    "source": [
     "### Calldata"
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d49ae8ff",
+   "id": "0d427d61",
    "metadata": {},
    "source": [
     "Is the input to our program."
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f165e2e",
+   "id": "85538f4f",
    "metadata": {},
    "source": [
     "### Flags"
@@ -130,10 +130,42 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acc4a37c",
+   "id": "38d9e555",
    "metadata": {},
    "source": [
     "We are going to keep track of two flags. The `stop_flag` and `revert_flag`. If one of them is `True` the current execution is going to stop."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "446fb931",
+   "metadata": {},
+   "source": [
+    "### Returndata"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d39d4223",
+   "metadata": {},
+   "source": [
+    "The EVM can return data after execution. We store this data in `return`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f5076db",
+   "metadata": {},
+   "source": [
+    "### Logs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e90bba27",
+   "metadata": {},
+   "source": [
+    "There are several opcodes that emit logs when executed. The result of these logs is saved here."
    ]
   },
   {
@@ -161,7 +193,10 @@
     "        self.calldata = calldata\n",
     "        \n",
     "        self.stop_flag   = False\n",
-    "        self.revert_flag = False"
+    "        self.revert_flag = False\n",
+    "        \n",
+    "        self.returndata = []\n",
+    "        self.logs       = []"
    ]
   }
  ],
