--- a/06_stop.ipynb
+++ b/06_stop.ipynb
@@ -13,7 +13,7 @@
    "id": "896304a5",
    "metadata": {},
    "source": [
-    "Our first opcode. Stop is a very simple opcode. All it does is it halts execution."
+    "Our first opcode! Stop is a very simple. All it does is it halts execution by setting the `stop_flag` to `True`."
    ]
   },
   {
