--- a/07_math.ipynb
+++ b/07_math.ipynb
@@ -9,6 +9,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "577d70ee",
+   "metadata": {},
+   "source": [
+    "We are going to implement all arithmetic operations here. These are the first opcodes that actually manipulate the stack and consume some gas."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "18e71195",
+   "metadata": {},
+   "source": [
+    "Lets see how `add` works. We are going to `pop` 2 values from the stack add them and `push` back the result on the stack.\n",
+    "\n",
+    "We also need to increment the `program counter (pc)` by one. In the end we need to deduct 3 gas for executing the `add` operation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "234e88d3",
+   "metadata": {},
+   "source": [
+    "Most arithmetic opcodes work like this."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 69,
    "id": "f4c2d206",
