--- a/08_comparisions.ipynb
+++ b/08_comparisions.ipynb
@@ -12,8 +12,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1bf359dc",
+   "metadata": {},
+   "source": [
+    "# Comparisons"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7253af6f",
+   "metadata": {},
+   "source": [
+    "Very similar to the arithmetic opcodes. But rather than adding or subtracting values we compare them."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a5612231",
+   "metadata": {},
+   "source": [
+    "#### Less than"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "a222fba0",
    "metadata": {},
    "outputs": [],
@@ -26,13 +50,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0d96a314",
+   "metadata": {},
+   "source": [
+    "#### Signed Less than"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "e626f7af",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def slt(evm):\n",
+    "def slt(evm): # signed less than\n",
     "    a, b = evm.stack.pop(), evm.stack.pop()\n",
     "    a = unsigned_to_signed(a)\n",
     "    b = unsigned_to_signed(b)\n",
@@ -42,17 +74,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "83a96c2f",
+   "metadata": {},
+   "source": [
+    "#### Greater than"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "cd80ba41",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def gt(evm):\n",
+    "def gt(evm): # greater than\n",
     "    a, b = evm.stack.pop(), evm.stack.pop()\n",
     "    evm.stack.push(1 if a > b else 0)\n",
     "    evm.pc += 1\n",
     "    evm.gas_dec(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c58b9332",
+   "metadata": {},
+   "source": [
+    "#### Signed Greater than"
    ]
   },
   {
@@ -72,6 +120,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "101de0f3",
+   "metadata": {},
+   "source": [
+    "#### Equal"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "id": "311a0d2a",
@@ -83,6 +139,14 @@
     "    cpu.stack.push(1 if a == b else 0)\n",
     "    cpu.pc += 1\n",
     "    cpu.gas_dec(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24e94e14",
+   "metadata": {},
+   "source": [
+    "#### Is Zero"
    ]
   },
   {
