--- a/09_logic.ipynb
+++ b/09_logic.ipynb
@@ -1,6 +1,30 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "d9c52e04",
+   "metadata": {},
+   "source": [
+    "# Logic"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c0d9f8f4",
+   "metadata": {},
+   "source": [
+    "You are very familiar with this now. Same concept, different operations."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "08c1bffd",
+   "metadata": {},
+   "source": [
+    "#### And"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "68766f90",
@@ -12,6 +36,14 @@
     "    evm.stack.push(a & b)\n",
     "    evm.pc += 1\n",
     "    evm.gas_dec(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d1198500",
+   "metadata": {},
+   "source": [
+    "#### Or"
    ]
   },
   {
@@ -29,6 +61,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c22ed407",
+   "metadata": {},
+   "source": [
+    "#### Xor"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "c95f5b28",
@@ -40,6 +80,14 @@
     "    evm.stack.push(a ^ b)\n",
     "    evm.pc += 1\n",
     "    evm.gas_dec(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d004584",
+   "metadata": {},
+   "source": [
+    "#### Not"
    ]
   },
   {
