--- a/10_bit.ipynb
+++ b/10_bit.ipynb
@@ -12,6 +12,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1b1b2c02",
+   "metadata": {},
+   "source": [
+    "# Bit"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dacd843e",
+   "metadata": {},
+   "source": [
+    "Again, same concept but for bit operations."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e98854d",
+   "metadata": {},
+   "source": [
+    "#### Byte"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a539e1e",
+   "metadata": {},
+   "source": [
+    "Get one byte from a word (32 bytes)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "id": "444c69ad",
@@ -24,6 +56,101 @@
     "    else      : result = (x // pow(256, 31 - i)) % 256\n",
     "    evm.pc += 1\n",
     "    evm.gas_dec(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ae4215ec",
+   "metadata": {},
+   "source": [
+    "## Bit shifts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "561a78d4",
+   "metadata": {},
+   "source": [
+    "Lets see what a bit shift operation looks like"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "93604d02",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0b10110'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bin(22) # binary of 22"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "983676ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0b1011000'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bin(22 << 2) # bit shift by 2 to the left"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "7d50c632",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0b101'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bin(22 >> 2) # bit shift by 2 to the right"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "18b16036",
+   "metadata": {},
+   "source": [
+    "#### Bit Shift left"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "810cd393",
+   "metadata": {},
+   "source": [
+    "`1010` bit shifted left by `2` positions becomes `101000`"
    ]
   },
   {
@@ -41,6 +168,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ed880966",
+   "metadata": {},
+   "source": [
+    "#### Bit Shift right"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab2c80f8",
+   "metadata": {},
+   "source": [
+    "`1010` bit shifted left by `2` positions becomes `10`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "id": "2089a68a",
@@ -52,6 +195,14 @@
     "    evm.stack.push(value >> shift)\n",
     "    evm.pc += 1\n",
     "    evm.gas_dec(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ee69595",
+   "metadata": {},
+   "source": [
+    "#### Signed Shift right"
    ]
   },
   {
