--- a/01_introduction.ipynb
+++ b/01_introduction.ipynb
@@ -211,7 +211,7 @@
    "id": "5091ece3",
    "metadata": {},
    "source": [
-    "We will build our mini-EVM from the bottom up. We will start with the `Stack`. Then move to `Memory` and `Storage`. Then we implement all EVM opcodes."
+    "We will build our mini-EVM from the bottom up. We will start with the `Stack`. Then move to `Memory` and `Storage`. Then we will implement the opcodes, which will take most of our time. "
    ]
   },
   {
