--- a/12_environment.ipynb
+++ b/12_environment.ipynb
@@ -1,6 +1,30 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "03255559",
+   "metadata": {},
+   "source": [
+    "# Environment"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1fa2b79c",
+   "metadata": {},
+   "source": [
+    "These opcodes give you access to the Ethereum environment"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dd083b0c",
+   "metadata": {},
+   "source": [
+    "#### Address"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "e957a322",
@@ -11,6 +35,14 @@
     "    evm.stack.push(\"0x414b60745072088d013721b4a28a0559b1A9d213\")\n",
     "    evm.pc += 1\n",
     "    evm.gas_dec(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b92119ac",
+   "metadata": {},
+   "source": [
+    "#### Balance"
    ]
   },
   {
@@ -29,6 +61,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "288612f9",
+   "metadata": {},
+   "source": [
+    "#### Origin"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "184910fc",
@@ -39,6 +79,14 @@
     "    evm.stack.push(\"0x414b60745072088d013721b4a28a0559b1A9d213\")\n",
     "    evm.pc += 1\n",
     "    evm.gas_dec(2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "55448771",
+   "metadata": {},
+   "source": [
+    "#### Caller"
    ]
   },
   {
@@ -55,6 +103,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b2a0d2ce",
+   "metadata": {},
+   "source": [
+    "#### Callvalue"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "ed2ce73a",
@@ -65,6 +121,14 @@
     "    evm.stack.push(evm.value)\n",
     "    evm.pc += 1\n",
     "    evm.gas_dec(2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "81eabd58",
+   "metadata": {},
+   "source": [
+    "#### Calldataload"
    ]
   },
   {
@@ -92,6 +156,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c3ec009f",
+   "metadata": {},
+   "source": [
+    "#### Calldatasize"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "f113ad83",
@@ -102,6 +174,14 @@
     "    evm.stack.push(len(evm.calldata))\n",
     "    evm.pc += 1\n",
     "    evm.gas_dec(2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "efa6bed5",
+   "metadata": {},
+   "source": [
+    "#### Calldatacopy"
    ]
   },
   {
@@ -128,6 +208,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4d9fd21b",
+   "metadata": {},
+   "source": [
+    "#### Codesize"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "3722d443",
@@ -138,6 +226,14 @@
     "    evm.stack.push(len(evm.program))\n",
     "    evm.pc += 1\n",
     "    evm.gas_dec(2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d0c69192",
+   "metadata": {},
+   "source": [
+    "#### Codecopy"
    ]
   },
   {
@@ -164,6 +260,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b9d31516",
+   "metadata": {},
+   "source": [
+    "#### Gas Price"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "id": "f11fcf1b",
@@ -174,6 +278,14 @@
     "    evm.stack.push(0x00)\n",
     "    evm.pc += 1\n",
     "    evm.gas_dec(2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05efc91b",
+   "metadata": {},
+   "source": [
+    "#### External Code Size"
    ]
   },
   {
@@ -188,6 +300,14 @@
     "    evm.stack.push(0x00)\n",
     "    evm.gas_dec(2600) # 100 if warm\n",
     "    evm.pc += 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c3dd915",
+   "metadata": {},
+   "source": [
+    "#### External Code Copy"
    ]
   },
   {
@@ -216,6 +336,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "17caa51a",
+   "metadata": {},
+   "source": [
+    "#### Return Data Size"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "id": "f9dce9b3",
@@ -226,6 +354,14 @@
     "    evm.stack.push(0x00) # no return data\n",
     "    evm.pc += 1\n",
     "    evm.gas_dec(2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eef6961b",
+   "metadata": {},
+   "source": [
+    "#### Return Data Copy"
    ]
   },
   {
@@ -251,6 +387,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "802aa6a2",
+   "metadata": {},
+   "source": [
+    "#### External Code Hash"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "0501762f",
@@ -266,6 +410,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e8ad9294",
+   "metadata": {},
+   "source": [
+    "#### Block Hash"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "a8bc2485",
@@ -278,6 +430,14 @@
     "    evm.stack.push(0x1cbcfa1ffb1ca1ca8397d4f490194db5fc0543089b9dee43f76cf3f962a185e8)\n",
     "    evm.pc += 1\n",
     "    evm.gas_dec(20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d8dc3b3d",
+   "metadata": {},
+   "source": [
+    "#### Coinbase"
    ]
   },
   {
